test/functions/whereClauses/whereClauseArgMismatch.good
whereClauseArgMismatch.chpl:9: error: unresolved call 'foo(1.2)'
whereClauseArgMismatch.chpl:1: note: this candidate did not match: foo(x: uint)
whereClauseArgMismatch.chpl:9: note: because actual argument #1 with type 'real(64)'
whereClauseArgMismatch.chpl:1: note: is passed to formal 'x: uint(64)'
